# simple-stein-svgd

./: LICENSE  README.md  setup.cfg
examples/: test_example.py
simple-stein-svgd/: kernels.py
simple_stein_svgd/: __init__.py  kernels.py  svgd.py
