[metadata]
name = simple-stein-svgd
version = 0.0.7
author = Puneet
author_email = brpuneet898@gmail.com
description = A minimal implementation of Stein Variational Gradient Descent (SVGD)
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brpuneet898/simple-stein-svgd
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
